--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
         <div class="total-completed">Total Sales: ₹<span id="completed-total">0</span></div>
     </div>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
-   
+<style>
+    .date, .total-completed {
+        color: red;
+        font-weight: bold;
+    }
+</style>
     <style>
         * {
             margin: 0;
