--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Freshly Desi</title>
-    <p>Fresh • Local • Delicious</p>
+    <title>Freshly Desi | OTA</title>
     <div class="header-info">
         <div class="date">Date: <span id="current-date"></span></div>
         <div class="total-completed">Total Sales: ₹<span id="completed-total">0</span></div>
@@ -163,7 +162,7 @@
     }
     
     .date, .total-completed {
-        color: #FFD700;
+        color: #761F67;
         font-weight: bold;
     }
         .toast {
