--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Freshly Desi | OTA</title>
-    <div class="header-info">
-        <div class="date">Date: <span id="current-date"></span></div>
-        <div class="total-completed">Total Sales: ₹<span id="completed-total">0</span></div>
-    </div>
+   
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 <style>
     .date, .total-completed {
@@ -220,8 +217,13 @@
         <h1>Freshly Desi</h1>
         <p>Fresh • Local • Delicious</p>
     </header>
+
     <button class="fullscreen-btn" onclick="toggleFullScreen()">Toggle Full Screen</button>
-    <div class="container">
+    
+ <div class="header-info">
+        <div class="date">Date: <span id="current-date"></span></div>
+        <div class="total-completed">Total Sales: ₹<span id="completed-total">0</span></div>
+    </div><div class="container">
         <div class="menu-section">
             <div class="category">
                 <h2 class="category-title">Quick Bites</h2>
