--- a/index.html
+++ b/index.html
@@ -413,6 +413,17 @@
                 <div class="menu-item">
                     <div class="item-details">
                         <div class="item-name">Ginger /  Elaichi / Masala Tea</div>
+                        <div class="item-price">₹15</div>
+                    </div>
+                    <div class="quantity-control">
+                        <button class="qty-btn" onclick="updateQuantity(this, -1)">-</button>
+                        <input type="number" class="quantity" value="0" min="0" readonly>
+                        <button class="qty-btn" onclick="updateQuantity(this, 1)">+</button>
+                    </div>
+                </div>
+<div class="menu-item">
+                    <div class="item-details">
+                        <div class="item-name">Lemon Tea</div>
                         <div class="item-price">₹25</div>
                     </div>
                     <div class="quantity-control">
