--- a/index.html
+++ b/index.html
@@ -274,6 +274,17 @@
                         <button class="qty-btn" onclick="updateQuantity(this, 1)">+</button>
                     </div>
                 </div>
+<div class="menu-item">
+                    <div class="item-details">
+                        <div class="item-name">Basil Pesto Margherita</div>
+                        <div class="item-price">₹279</div>
+                    </div>
+                    <div class="quantity-control">
+                        <button class="qty-btn" onclick="updateQuantity(this, -1)">-</button>
+                        <input type="number" class="quantity" value="0" min="0" readonly>
+                        <button class="qty-btn" onclick="updateQuantity(this, 1)">+</button>
+                    </div>
+                </div>
                 <div class="menu-item">
                     <div class="item-details">
                         <div class="item-name">Corn and Cheese</div>
@@ -333,6 +344,28 @@
                     <div class="item-details">
                         <div class="item-name">Basil Pesto Paneer</div>
                         <div class="item-price">₹339</div>
+                    </div>
+                    <div class="quantity-control">
+                        <button class="qty-btn" onclick="updateQuantity(this, -1)">-</button>
+                        <input type="number" class="quantity" value="0" min="0" readonly>
+                        <button class="qty-btn" onclick="updateQuantity(this, 1)">+</button>
+                    </div>
+                </div>
+        <div class="menu-item">
+                    <div class="item-details">
+                        <div class="item-name">Packaging</div>
+                        <div class="item-price">₹5</div>
+                    </div>
+                    <div class="quantity-control">
+                        <button class="qty-btn" onclick="updateQuantity(this, -1)">-</button>
+                        <input type="number" class="quantity" value="0" min="0" readonly>
+                        <button class="qty-btn" onclick="updateQuantity(this, 1)">+</button>
+                    </div>
+                </div>
+<div class="menu-item">
+                    <div class="item-details">
+                        <div class="item-name">Packaging</div>
+                        <div class="item-price">₹10</div>
                     </div>
                     <div class="quantity-control">
                         <button class="qty-btn" onclick="updateQuantity(this, -1)">-</button>
@@ -423,7 +456,7 @@
                 </div>
 <div class="menu-item">
                     <div class="item-details">
-                        <div class="item-name">Lemon Tea</div>
+                        <div class="item-name">Green Tea/Lemon Tea</div>
                         <div class="item-price">₹25</div>
                     </div>
                     <div class="quantity-control">
